unpackaged/main/default/objects/GT_Sporting_Event__c/GT_Sporting_Event__c.object-meta.xml
<CustomObject>
    <description>This will be the Sporting Event object for all accounts in Generic Template</description>
    <label>Sporting Event</label>
    <nameField>
        <displayFormat>SE - {0000}</displayFormat>
        <label>Sporting Event</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sporting Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>