unpackaged/main/default/objects/GT_Sporting_Event__c/fields/Account_Login_Password__c.field-meta.xml
<CustomField>
    <fullName>Account_Login_Password__c</fullName>
    <label>Account Login Password :</label>
    <length>100</length>
    <type>Text</type>
</CustomField>