unpackaged/main/default/objects/GT_Sporting_Event__c/fields/Account_Login_Username__c.field-meta.xml
<CustomField>
    <fullName>Account_Login_Username__c</fullName>
    <label>Account Login Username :</label>
    <length>100</length>
    <type>Text</type>
</CustomField>