unpackaged/main/default/objects/GT_Sporting_Event__c/fields/CC_Project_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>CC_Project_Manager_Phone__c</fullName>
    <formula>IF((TEXT(CC_Project_Manager__c) == &quot;Katie Lillie&quot;),&quot;&quot;, 
IF((TEXT(CC_Project_Manager__c) == &quot;Lisandra Fernandez&quot;),&quot;(786) 701-7302&quot;, 
IF((TEXT(CC_Project_Manager__c) == &quot;Kayleigh Fortuna&quot;),&quot;(978) 264-6860&quot;, 
IF((TEXT(CC_Project_Manager__c) == &quot;Cassandra Zwick&quot;),&quot;(786) 701-7250&quot;, 
IF((TEXT(CC_Project_Manager__c) == &quot;Stephanie Naida&quot;),&quot;(724) 743-6329 &quot;, 
IF((TEXT(CC_Project_Manager__c) == &quot;Juanita Timney&quot;),&quot;(724) 416-9853&quot;,
IF((TEXT(CC_Project_Manager__c) == &quot;Gina Carroll&quot;),&quot;(724) 416-2307&quot;,
IF((TEXT(CC_Project_Manager__c) == &quot;Lisa Gebhart&quot;),&quot;(212) 324-5027&quot;,&quot; &quot;))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC Project Manager Phone</label>
    <type>Text</type>
</CustomField>