unpackaged/main/default/objects/GT_Sporting_Event__c/fields/F_B_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>F_B_Due_Date__c</fullName>
    <label>F&amp;B Due Date</label>
    <type>Date</type>
</CustomField>