unpackaged/main/default/objects/GT_Sporting_Event__c/fields/GES_AM_Email__c.field-meta.xml
<CustomField>
    <fullName>GES_AM_Email__c</fullName>
    <label>GES AM Email</label>
    <type>Email</type>
</CustomField>