unpackaged/main/default/objects/GT_Sporting_Event__c/fields/GES_Connect_Event__c.field-meta.xml
<CustomField>
    <fullName>GES_Connect_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GES Connect Event</label>
    <referenceTo>GT_Event__c</referenceTo>
    <relationshipLabel>Sporting Events</relationshipLabel>
    <relationshipName>Sporting_Events</relationshipName>
    <type>Lookup</type>
</CustomField>