unpackaged/main/default/objects/GT_Sporting_Event__c/fields/Invitation_Required__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Required__c</fullName>
    <label>Invitation Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>