unpackaged/main/default/objects/GT_Sporting_Event__c/fields/No_Tickets_included__c.field-meta.xml
<CustomField>
    <fullName>No_Tickets_included__c</fullName>
    <label>No. Tickets (included)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>