unpackaged/main/default/objects/GT_Sporting_Event__c/fields/Parking_Passes_Included__c.field-meta.xml
<CustomField>
    <fullName>Parking_Passes_Included__c</fullName>
    <label>Parking Passes Included</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>