unpackaged/main/default/objects/GT_Sporting_Event__c/fields/Sporting_event_Name__c.field-meta.xml
<CustomField>
    <fullName>Sporting_event_Name__c</fullName>
    <label>Sporting Event Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>