unpackaged/main/default/objects/GT_Sporting_Event__c/fields/Sporting_Event_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sporting_Event_Notes__c</fullName>
    <label>Sporting Event Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>