unpackaged/main/default/objects/GT_Sporting_Event__c/fields/Sporting_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Sporting_Event_Type__c</fullName>
    <label>Sporting Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suite</fullName>
            </value>
            <value>
                <fullName>Season Tickets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>