unpackaged/main/default/objects/GT_Sporting_Event__c/recordTypes/GT_SportingEvent_CC.recordType-meta.xml
<RecordType>
    <fullName>GT_SportingEvent_CC</fullName>
    <active>true</active>
    <label>GT SportingEvent CC</label>
</RecordType>